--- a/pages/index.css
+++ b/pages/index.css
@@ -194,3 +194,95 @@
 .recipes__video-caption_4 {
   padding-left: 223.12px;
 }
+
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url("../images/background_reservation.svg");
+  background-position: center;
+  background-size: cover;
+}
+
+.reservation__title {
+  width: 241.95px;
+  margin: 0 auto;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  padding-top: 100px;
+  color: #000;
+}
+
+.reservation__form {
+  width: 385px;
+  margin: 0 auto;
+  padding-top: 80px;
+  padding-bottom: 120px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__fieldset {
+  border: none;
+  margin: 0;
+  padding: 0 0 32px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.form__label {
+  padding-bottom: 8px;
+  padding-top: 32px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000;
+}
+
+.form__label_first {
+  padding-top: 0;
+}
+
+.form__label_last {
+  padding-bottom: 0;
+  margin: 0 auto;
+}
+
+.form__input {
+  padding: 15px 20px;
+  max-width: 385px;
+  border: 1px solid #838383;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #000;
+}
+
+.form__button {
+  padding: 20px;
+  border-radius: 4px;
+  background-color: #1878dc;
+  transition: background-color 0.3s ease-in-out;
+  color: #fff;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__button:hover {
+  background-color: #3f96f3;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+}
