--- a/blocks/form.css
+++ b/blocks/form.css
@@ -22,11 +22,11 @@
   color: #000;
 }
 
-.form__label_first {
+.form__label_type_name {
   padding-top: 0;
 }
 
-.form__label_last {
+.form__label_type_checkbox {
   padding-bottom: 0;
   margin: 0 auto;
 }
@@ -41,10 +41,12 @@
   font-size: 20px;
   line-height: 30px;
   color: #000;
+  border-radius: 4px;
 }
 
 .form__button {
   padding: 20px;
+  border: none;
   border-radius: 4px;
   background-color: #1878dc;
   transition: background-color 0.3s ease-in-out;
@@ -62,4 +64,6 @@
 
 .form__checkbox {
   border-radius: 2px;
+  height: 20px;
+  width: 20px;
 }
