--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,6 +1,13 @@
 .header {
   height: 800px;
   position: relative;
+  background-color: #fff;
+  background-image: url("../images/background_header.svg");
+  background-position: center;
+  background-size: cover;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .header__title {
@@ -39,6 +46,7 @@
 }
 
 .header__image {
+  z-index: -1;
   width: 646px;
   height: 568px;
   position: absolute;
@@ -49,18 +57,9 @@
 .header__footer {
   display: flex;
   justify-content: space-between;
-}
-
-.header__footer-column_first {
-  position: absolute;
-  bottom: 40px;
-  left: 80px;
-}
-
-.header__footer-column_last {
-  position: absolute;
-  bottom: 40px;
-  right: 80px;
+  margin-top: auto;
+  align-items: flex-end;
+  padding: 0 80px 40px;
 }
 
 .header__paragraph {
