--- a/pages/index.css
+++ b/pages/index.css
@@ -8,8 +8,9 @@
 @import url("../blocks/card.css");
 @import url("../blocks/about.css");
 @import url("../blocks/footer.css");
+@import url("../blocks/page.css");
 
-.page {
+/*.page {
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
@@ -17,10 +18,7 @@
   font-size: 16px;
   line-height: 20px;
   background-color: #fff;
-  background-image: url("../images/background_header.svg");
-  background-position: center;
-  background-size: cover;
-}
+}*/
 
 /*
 .header {
