Making further corrections

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -3,15 +3,16 @@
   background-image: url("../images/background_menu.svg");
   background-position: center;
   background-size: cover;
-  position: relative;
-  z-index: 1;
+  /*position: relative;
+  z-index: 1;*/
 }
 
 .menu__title {
   max-width: 780px;
-  width: 111.47px;
+  /*width: 111.47px;*/
+  text-align: center;
   margin: 0 auto;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -22,7 +23,7 @@
 .menu__subtitle {
   max-width: 780px;
   margin: 0 auto;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -32,12 +33,12 @@
 }
 
 .menu__cards {
-  width: 1180px;
+  /*width: 1180px;*/
   margin: 0 auto;
   padding: 100px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  position: relative;
-  z-index: 1;
+  /*position: relative;
+  z-index: 1;*/
 }
