--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,7 +12,7 @@
 
 .card__title {
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -27,7 +27,7 @@
 }
 
 .card__list-item {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -36,7 +36,7 @@
   padding-bottom: 16px;
 }
 
-.card__list-item_last {
+.card__list-item_last-child {
   padding-bottom: 0;
 }
 
