--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,7 +17,7 @@
 .footer__social-heading {
   margin: 0;
   padding-bottom: 20px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -47,7 +47,7 @@
 .footer__social-link {
   text-decoration: none;
   color: #fff;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -63,7 +63,7 @@
   margin: 0;
   padding-bottom: 60px;
   padding-left: 80px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
