--- a/blocks/form.css
+++ b/blocks/form.css
@@ -14,7 +14,7 @@
 .form__label {
   padding-bottom: 8px;
   padding-top: 32px;
-  font-family: Inter;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -35,7 +35,7 @@
   padding: 15px 20px;
   max-width: 385px;
   border: 1px solid #838383;
-  font-family: Inter;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
