--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,6 +1,7 @@
 .form {
   display: flex;
   flex-direction: column;
+  max-width: 385px;
 }
 
 .form__fieldset {
@@ -27,8 +28,10 @@
 }
 
 .form__label_type_checkbox {
+  display: flex;
   padding-bottom: 0;
   margin: 0 auto;
+  align-items: center;
 }
 
 .form__input {
@@ -51,7 +54,7 @@
   background-color: #1878dc;
   transition: background-color 0.3s ease-in-out;
   color: #fff;
-  font-family: Inter;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -66,4 +69,5 @@
   border-radius: 2px;
   height: 20px;
   width: 20px;
+  margin-right: 12px;
 }
